site pincipal atualizado

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <h1>Votação online</h1>
     </header>
     <main>
-        <h2>Escolha a uma das opções </h2>
-        <a href="votar.html">Votar</a>
-        <a href="contagem.html">Ver a contagem de votação</a>
+        <h2>Escolha uma das opções </h2>
+        <section>
+            <a href="votar.html">Votar</a>
+            <a href="contagem.html">Ver a contagem</a>
+        </section>  
     </main>
     <footer>
         <p>Criado por winike cuamba </p> 
