pagina de votacao
Criação da pagina de votação

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <main>
         <h2>Escolha uma das opções </h2>
         <section>
-            <a href="votar.html">Votar</a>
-            <a href="contagem.html">Ver a contagem</a>
+            <a href="html/votar.html">Votar</a>
+            <a href="html/contagem.html">Ver a contagem</a>
         </section>  
     </main>
     <footer>
