pagina de votacao atualizada
A pagina de votação foi atualizada

--- a/html/votar.html
+++ b/html/votar.html
@@ -9,20 +9,47 @@
 </head>
 <body>
   <header>
-    <h1>Mesa de votação</h1>
+    <h1>Votação online</h1>
   </header>
   <main>
-    <h2>Informações dos candidatos</h2>
+    <h2>Mesa de votação</h2>
     <section>
       <article>
-        <h3 class="nomeDoCandidato">Winike</h3> <button class="btnDetalhes"></button> 
+        <span class="candidato"> 
+          <h3 class="nomeDoCandidato">Winike</h3> 
+          <!--<button class="btnDetalhes"></button> -->
+        </span>
         <div class="detalhes">
           Nome <span class="nome">Winike Cuamba</span> <br>
           Idade <span class="idade">14</span> <br>
           Profissão <span class="profissao">Programdor</span> <br>
         </div>
       </article>
-       <a href="#">Mesa de votação</a>    
+      
+      <article>
+        <span class="candidato"> 
+          <h3 class="nomeDoCandidato">Francisco</h3> 
+          <!--<button class="btnDetalhes"></button> -->
+        </span>
+        <div class="detalhes">
+          Nome <span class="nome">Francisco Jose</span> <br>
+          Idade <span class="idade">24</span> <br>
+          Profissão <span class="profissao">Professor</span> <br>
+        </div>
+      </article>
+
+      <article>
+        <span class="candidato"> 
+          <h3 class="nomeDoCandidato">Maria</h3> 
+          <!--<button class="btnDetalhes"></button> -->
+        </span>
+        <div class="detalhes">
+          Nome <span class="nome">Maria Francisca</span> <br>
+          Idade <span class="idade">38</span> <br>
+          Profissão <span class="profissao">Medica</span> <br>
+        </div>
+      </article>
+       <a href="#" id="mesaDeVotacao">Mesa de votação</a>    
     </section>
   </main>
 </body>
