pagina principal atualizada
Atualização da pagina principal
Adicição de icones
Começo da pagina de contagem

--- a/html/contagem.html
+++ b/html/contagem.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../style/contagem.css">
+  <link rel="shortcut icon" href="../image/votacao-icone.jpg" type="image/x-icon">
   <title>Site de votação</title>
 </head>
 <body>
-  
+  <header>
+    <img src="../image/votacao-icone.webp" alt="icone-votacao">
+    <h1>Votação online</h1>
+  </header>
 </body>
 </html>
