--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de votação</title>
     <link rel="stylesheet" href="style/mobileStyle.css">
+    <link rel="shortcut icon" href="image/votacao-icone.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
+        <img src="image/votacao-icone.webp"  alt="icone-de-votação" id="icone-votacao"> 
         <h1>Votação online</h1>
     </header>
     <main>
-        <h2>Escolha uma das opções </h2>
+        <h2>Site de votação</h2>
+        <p>
+            O site de votação fou criado para a facilidade na votação assim pondendo votar a qualquer momento e em qualquer lugal de modo facil e rapido.
+        </p>
         <section>
             <a href="html/votar.html">Votar</a>
             <a href="html/contagem.html">Ver a contagem</a>
         </section>  
-    </main>
+    </main> 
     <footer>
-        <p>Criado por winike cuamba</p> 
+        <p>Criado por <abbr title="Desenvolvedor">winike cuamba</abbr></p> 
     </footer>
 </body>
 </html>
