--- a/html/votar.html
+++ b/html/votar.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../style/votar.css">
+  <link rel="shortcut icon" href="../image/votacao-icone.jpg" type="image/x-icon">
   <title>Site de votação</title>
 </head>
 <body>
