--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site de votação</title>
-    <link rel="stylesheet" href="style/mobileStyle.css">
+    <link rel="stylesheet" href="style/style.css" media="sreen and (min-width: 620)">
+    <link rel="stylesheet" href="style/mobileStyle.css" >
     <link rel="shortcut icon" href="image/votacao-icone.jpg" type="image/x-icon">
+    <title>Site de votação</title>
 </head>
 <body>
     <header>
@@ -14,6 +15,7 @@
         <h1>Votação online</h1>
     </header>
     <main>
+        
         <h2>Site de votação</h2>
         <p>
             O site de votação fou criado para a facilidade na votação assim pondendo votar a qualquer momento e em qualquer lugal de modo facil e rapido.
