--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Projeto de votação que permite o usuario votar de maneira facil e rapida">
+    <meta name="theme-color" content="white">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet"  href="style/normalDevice.css" media="screen and (min-width: 768px)">
     <link rel="stylesheet" href="style/bigDevice.css" media="screen and (min-width: 1336px)">
