formulario de votacao feito

--- a/html/votar.html
+++ b/html/votar.html
@@ -65,7 +65,7 @@
           Profissão <span class="profissao">Medica</span> <br>
         </div>
       </article>
-      <a href= "#" id="mesaDeVotacao">Mesa de votação</a>    
+      <a href= "./form.html" id="mesaDeVotacao">Mesa de votação</a>    
     </section>
   </main>
   <footer>
