--- a/html/form.html
+++ b/html/form.html
@@ -10,31 +10,34 @@
 </head>
 <body>
    <h1 class="title">Votação eleitoral</h1>
-   <form action="#" method="post" autocomplete="on" class="formulario">
+   <form action="#" method="get" autocomplete="on" class="formulario">
+      <h2 class="titulo-form">Votar</h2>
       <fieldset id="user-name"> 
          <label for="Inome">Nome</label><br>
-         <input type="text" name="nome" id="Inome" autocomplete="name" placeholder="Ex: Winike" minlength="4" maxlength="30" required>
+         <input type="text" name="dados{nome}" id="Inome" autocomplete="name" placeholder="Ex: Winike" minlength="4" maxlength="30" required>
       </fieldset>
       <fieldset id="user-age">    
          <label for="Iidade">Idade</label><br>
-         <input type="number" name="idade" id="Iidade" autocomplete="cc-number" placeholder="Ex: 25" min="0" max="120" required>
+         <input type="number" name="dados{idade}" id="Iidade" autocomplete="cc-number" placeholder="Ex: 25" min="0" max="120" required>
       </fieldset>
       <fieldset id="user-chose">
          <div class="candidato1 candidato">
             <label for="candidato1" class="label-candidato">Winike</label> 
-            <input type="radio" name="candidato" id="candidato1" class="radio-cadidato">
+            <input type="radio" name="dados{candidato}" id="candidato1" class="radio-cadidato">
          </div>
          <div class="candidato2 candidato">
             <label for="candidato2" class="label-candidato">Francisco</label>
-            <input type="radio" name="candidato" id="candidato2" class="radio-cadidato">
+            <input type="radio" name="dados{candidato}" id="candidato2" class="radio-cadidato">
          </div>
          <div class="candidato3 candidato">
             <label for="candidato3" class="label-candidato">Maria</label>
-            <input type="radio" name="candidato" id="candidato3" class="radio-cadidato">
+            <input type="radio" name="dados{candidato}" id="candidato3" class="radio-cadidato">
          </div>
       </fieldset>
       <br>
       <button class="btn-submeter">Votar</button>
    </form>
+   <script>
+   </script>
 </body>
 </html>
